k8s-namespace-config-hpa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ner-app
