k8s-production-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ner-app-production
